--- a/N3Test/app/src/main/res/values/strings.xml
+++ b/N3Test/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <string name="title_activity_test">TestActivity</string>
+    <string name="start_test">Start Test</string>
 </resources>
